#916 -- Fix to logo z-index on large screen to make clickable again

--- a/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
+++ b/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
@@ -19,6 +19,7 @@
 
     .top-left {
       margin-bottom: 7px;
+
       @include devicebreak(xlarge) {
         margin-bottom: 0;
       }
@@ -98,6 +99,7 @@
             display: flex;
             align-items: center;
             margin-top: -15px;
+
             @include devicebreak(xlarge) {
               margin-top: 0;
             }
@@ -109,7 +111,7 @@
         @extend %img_none;
 
         position: relative;
-        z-index: 1;
+        z-index: 10;
 
         @include devicebreak(xlarge) {
           @include transform(translateX(-50%));
@@ -139,12 +141,14 @@
       display: flex;
       justify-content: flex-end;
       margin-bottom: 15px;
+
       @include devicebreak(xlarge) {
         margin-bottom: 0;
       }
 
       @include devicebreak(mediumonlytab) {
         margin-bottom: 0;
+
         .icon-globe {
           display: none;
         }
@@ -217,6 +221,7 @@
   }
 
   &.show-content {
+
     .mid-nav ul,
     .top-left,
     .top-right {
